Merge remote-tracking branch 'origin/Version_3.2.6'